# parallel_bilby

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.rst  setup.cfg  setup.py
.gitlab/issue_templates/: bug.md
ci_workflows/: end_to_end_analysis.yml  gw150914_runner.yml  make_docs.yml  pypi_deploy.yml  tests.yml
docs/: at_a_glance.rst  citing_parallel_bilby.rst  conf.py  data_analysis.rst  data_generation.rst  examples.rst  index.rst  installation.rst  requirements.txt
examples/GW150914/: GW150914.ini
examples/GW150914_IMRPhenomPv2/: GW150914.ini  README.md  tutorial.ipynb
examples/GW170817_IMRPhenomPv2_NRTidal/: GW170817.ini  GW170817.prior  GW170817_with_roq.ini  README.md  download_data.sh  slurm_submit_analysis.sh  slurm_submit_postprocess.sh  tutorial.ipynb
examples/fast_injection/: fast_injection.ini
examples/multiple_pbilby_injections/: pbilby_config_template.ini  pbilby_generation_job_template.ini  setup_multiple_pbilby_injections.py
parallel_bilby/: analysis.py  generation.py  parser.py  ptemcee_analysis.py  schwimmbad_fast.py  slurm.py  utils.py
parallel_bilby/analysis/: __init__.py  analysis.py  analysis_run.py  likelihood.py  main.py  plotting.py  read_write.py  run.py  utils.py  (+1 more)
src/: analysis.py  data_retrieval.py  generation.py  parser.py  postprocess.py  ptemcee_analysis.py  slurm.py  utils.py
tests/: __init__.py  analysis_test.py  cases.py  data_retrieval_test.py  generation_test.py  headnode_runner_test.py  parser_test.py  test_generation.py  test_parser.py  test_schwimmbad.py  utils.py
(+28 files in other folders)
