[flake8]
exclude = .git,docs,build,dist,test,*__init__.py
max-line-length = 120
ignore = E129 W504 W503 E203

[metadata]
license_file = LICENSE

[tool:pytest]
addopts = -p no:warnings

[tool:isort]
line-width=88
multi-line=3
trailing-comma=True
known_third_party=bilby,bilby_pipe,dill,dynesty,emcee,gwpy,matplotlib,mock,mpi4py,numpy,pandas,parallel_bilby,ptemcee,schwimmbad,setuptools,tqdm
